# stackql-deploy

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  README.rst  get-contributors.iql  get-contributors.sh  pyproject.toml  requirements.txt  setup.py  start-stackql-server.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: actionstest.yml  lint-check.yml  preview-web-deploy.yml  prod-web-deploy.yml  star-check.yml  test-web-deploy.yml
activity_monitor/: stackql_manifest.yml
activity_monitor/stackql_models/: resource_group.iql
activity_monitor/stackql_resources/: monitor_resource_group.iql
activity_monitor/stackql_tests/: monitor_resource_group.iql  resource_group.iql
aws-stack/: README.md  stackql_manifest.yml
aws-stack/external_scripts/: README.md
aws-stack/resources/: example_inet_gateway.iql  example_inet_gw_attachment.iql  example_inet_route.iql  example_route_table.iql  example_security_group.iql  example_subnet.iql  example_subnet_rt_assn.iql  example_vpc.iql  example_web_server.iql
aws-stack/stackql_docs/: example_vpc.md
cicd/setup/: setup-env.sh
docs/: requirements.txt
example_stack/: stackql_manifest.yml
images/: stackql-deploy.mermaid
k8s-the-hard-way/: stackql_manifest.yml
patch-doc-test/: README.md
shell_completions/: README.md  stackql-deploy-completion.bash  stackql-deploy-completion.fish  stackql-deploy-completion.ps1  stackql-deploy-completion.zsh
stackql_deploy/: __init__.py  cli.py  deploy.py  test.py
test-derek-aws/: README.md  stackql_manifest.yml
website/: docusaurus.config.js  package.json  sidebars.js
(+279 files in other folders)
